# onedep-cli

./: .gitignore  BASH_FUNCTIONS.md  README.md  cli.yml  pyproject.toml  test.py
examples/: handler.py
onedep_manager/: config.py  main.py  packages.py  schemas.py  services.py
onedep_manager/cli/: common.py  config.py  instance.py  instance_info.py  packages.py  paths.py  services.py  tools.py
onedep_manager/instance/: info.py
onedep_manager/services/: apache_handler.py  dispatcher.py  handlers.py  schemas.py  status.py
tests/: test_config.py  test_packages.py  test_services.py
tests/cli/: test_common.py  test_config.py  test_packages.py  test_services.py
tests/fixtures/: config.yaml
tests/fixtures/site-config/pdbe/pdbe_test/: site.cfg
tests/services/: test_dispatcher.py
