[tool.poetry]
name = "onedep_manager"
version = "0.2.0"
description = "Management application for OneDep instances."
authors = ["Weslley Morellato Bueno <wbueno@ebi.ac.uk>"]

[tool.poetry.scripts]
onedep-manager = "onedep_manager.main:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
